Ajax Error Handling

--- a/Kafala.Web.UI/Kafala.Web.UI.csproj
+++ b/Kafala.Web.UI/Kafala.Web.UI.csproj
@@ -246,6 +246,9 @@
     <Content Include="Views\DonationCase\Index.cshtml" />
     <Content Include="Views\DonationCase\Partial\Commitments.cshtml" />
     <Content Include="Views\Commitment\Partial\Payment.cshtml" />
+    <Content Include="Views\Shared\_LoadingElement.cshtml" />
+    <Content Include="Views\Shared\_DetailsPopUpTemplate.cshtml" />
+    <Content Include="Views\Shared\_ModalMessageTemplate.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
