--- a/Kafala.Web.UI/Views/Web.config
+++ b/Kafala.Web.UI/Views/Web.config
@@ -16,7 +16,8 @@
         <add namespace="System.Web.Routing" />
         <add namespace="Kafala.Web.ViewModels" />
         <add namespace="Foundation.Web" />
-        <add namespace="VortexSoft.Bootstrap" />
+        <!--<add namespace="VortexSoft.Bootstrap" />-->
+        <add namespace="Foundation.FormBuilder.DynamicForm"/>
         <add namespace="Foundation.FormBuilder" />
         <add namespace="Foundation.FormBuilder.Extensions" />
         <add namespace="Foundation.Web.Extensions" />
