--- a/Kafala.Web.UI/packages.config
+++ b/Kafala.Web.UI/packages.config
@@ -25,9 +25,10 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net45" />
+  <package id="NHibernateProfiler" version="2.0.2233.0" targetFramework="net45" />
   <package id="structuremap" version="2.6.4.1" targetFramework="net40" />
   <package id="Twitter.Bootstrap" version="3.0.0" targetFramework="net40" />
-  <package id="WebActivator" version="1.2.0.0" targetFramework="net45" />
+  <package id="WebActivator" version="1.4.4" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.3" targetFramework="net40" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
