--- a/Foundation.FormBuilder/Foundation.FormBuilder.csproj
+++ b/Foundation.FormBuilder/Foundation.FormBuilder.csproj
@@ -88,7 +88,10 @@
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Extensions\TagBuilderExtensions.cs" />
     <Compile Include="DynamicForm\FormElement.cs" />
+    <Compile Include="Form\Bootstrap.cs" />
+    <Compile Include="Form\HtmlAttributesUtility.cs" />
     <Compile Include="HtmlAttributes.cs" />
+    <Compile Include="HtmlElement.cs" />
     <Compile Include="ModelCache.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validation\ValidationAttribute.cs" />
