Updates due to documentation .. may require some fixes on consumer's code.

--- a/Kafala.Entities/Kafala.Entities.csproj
+++ b/Kafala.Entities/Kafala.Entities.csproj
@@ -94,7 +94,6 @@
     <Compile Include="PaymentPeriod.cs" />
     <Compile Include="PaymentStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DoNotMap\EntityAssemblyDataModelLocator.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -106,6 +105,9 @@
       <Project>{baa4e4d3-bdf1-45a9-85b2-9ba6e58e2e24}</Project>
       <Name>Foundation.Web</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DoNotMap\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
