--- a/Kafala.Web.UI/Kafala.Web.UI.csproj
+++ b/Kafala.Web.UI/Kafala.Web.UI.csproj
@@ -408,7 +408,9 @@
     <Content Include="Configuration\appSettings.config">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="Configuration\connectionStrings.config" />
+    <Content Include="Configuration\connectionStrings.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Configuration\smtp.config" />
   </ItemGroup>
   <ItemGroup>
