Fixes to kafala & foundation

--- a/Foundation.Web/Foundation.Web.csproj
+++ b/Foundation.Web/Foundation.Web.csproj
@@ -69,21 +69,21 @@
     <Compile Include="CustomAttribute\Operator.cs" />
     <Compile Include="Extensions\ButtonExtensions.cs" />
     <Compile Include="Extensions\ButtonGroup.cs" />
-    <Compile Include="Extensions\CacheType.cs" />
-    <Compile Include="Extensions\CachingExtentions.cs" />
+    <Compile Include="Caching\CacheType.cs" />
+    <Compile Include="Caching\CachingExtentions.cs" />
     <Compile Include="Extensions\CssMediaType.cs" />
     <Compile Include="Extensions\EnumExtensions.cs" />
     <Compile Include="Extensions\HtmlExtensions.cs" />
-    <Compile Include="Extensions\IFlushable.cs" />
-    <Compile Include="Extensions\InMemoryCache.cs" />
+    <Compile Include="Caching\IFlushable.cs" />
+    <Compile Include="Caching\InMemoryCache.cs" />
     <Compile Include="Extensions\MvcPanel.cs" />
     <Compile Include="Extensions\MvcPanelTab.cs" />
     <Compile Include="Extensions\NavHtmlTextWritter.cs" />
-    <Compile Include="Extensions\PagerExtensions.cs" />
+    <Compile Include="Paging\PagerExtensions.cs" />
     <Compile Include="Extensions\BasePagingExtensions.cs" />
     <Compile Include="Extensions\PopulatorHelpers.cs" />
     <Compile Include="Extensions\SlideDirection.cs" />
-    <Compile Include="Extensions\TableSorterExtensions.cs" />
+    <Compile Include="Sorter\TableSorterExtensions.cs" />
     <Compile Include="Extensions\UrlHelperExtensions.cs" />
     <Compile Include="Extensions\ValidationSummaryExtensions.cs" />
     <Compile Include="Filter\FilterUtility.cs" />
